// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly with bottom labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  justify-content: center;
  flex-direction: column-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="bottom"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="bottom"
      textalign="initial"
      textcolor="inherit"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and active state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #3061B3;
}

<div>
  <span
    class="c0 c1"
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and disabled state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #dfe4e9;
  background-color: #dfe4e9;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #98A7B7;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #98A7B7;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: not-allowed;
}

<div>
  <span
    class="c0 c1"
    disabled=""
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    disabled=""
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        disabled=""
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and hasError state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #3061B3;
}

<div>
  <span
    class="c0 c1"
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and indeterminate state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:not(:checked)~.c5 .c7 {
  transform: scale(1);
}

.c4:not(:checked)~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 11h10c.55 0 1 .45 1 1s-.45 1-1 1H7c-.55 0-1-.45-1-1s.45-1 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and active state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and disabled state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #dfe4e9;
  background-color: #dfe4e9;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #98A7B7;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #98A7B7;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: not-allowed;
}

<div>
  <span
    class="c0 c1"
    disabled=""
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    disabled=""
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        disabled=""
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and hasError state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and indeterminate state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:not(:checked)~.c5 .c7 {
  transform: scale(1);
}

.c4:not(:checked)~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
    textalign="initial"
    textcolor="inherit"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id=""
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 11h10c.55 0 1 .45 1 1s-.45 1-1 1H7c-.55 0-1-.45-1-1s.45-1 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with left labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="left"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="left"
      textalign="initial"
      textcolor="inherit"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with right labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="right"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="right"
      textalign="initial"
      textcolor="inherit"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with top labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked~.c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked~.c5 .c7 {
  transform: scale(1);
}

.c4:checked~.c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked)~.c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked)~.c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  flex-direction: column;
  justify-content: center;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="top"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="top"
      textalign="initial"
      textcolor="inherit"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
